# mdict-utils-gui

./: .gitignore  LICENSE  README.md  gui_exdb.spec  pyproject.toml
src/mdict-utils-gui/: gui_exdb.py  reader_ext.py
