
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdict-utils-gui"]


[project]
name = "mdict-utils-gui"
version = "0.0.1"
authors = [
  { name="Li Zhenhua", email="leechenhwa@163.com" },
]
description = "A simple GUI to export mdx to huadict db"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/leechenhwa2/mdict-utils-gui"
Issues = "https://github.com/leechenhwa2/mdict-utils-gui/issues"

